# Lightning

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: ast.hpp.707ACA323438B86A.idx  lexer.cpp.3C16829459F4AE76.idx  lexer.hpp.DED1BB50F7AEDEF6.idx  main.cpp.584C0350B421983D.idx  parser.cpp.C625DC6BFF78DF1C.idx  parser.hpp.002440C08C0BB695.idx  peg_demo.cpp.37DB987BE77F9113.idx
include/: ast.hpp  frontend.hpp  lcc.hpp  lexer.hpp  parser.hpp  streamlexer.hpp
src/: frontend.cpp  lcc.cpp  lexer.cpp  main.cpp  parser.cpp  streamlexer.cpp
tests/: lexer_test.cpp  streamlexer_tests.cpp
